# capstone

./: .gitmodules  README.md
Calibration/: camera_calibration.py  image_capture.py  stereo_calibration.py
aruco_box/: README.md
aruco_box/aruco_box/: model.sdf
aruco_box/aruco_box/materials/textures/: marker_info.yml
aruco_box/aruco_marker_0/: model.sdf
aruco_box/aruco_reference/: model.dae
aruco_box/aruco_reference/materials/textures/: marker_info.yml
aruco_box/distorted_camera/: model.config  model.sdf
aruco_box/src/: create_marker_tile_image.py  gen_marker_png.py
aruco_box/surgical_pointer/: mesh.stl  model.sdf  surgical-pointer.stl
data_fusion_py/: CMakeLists.txt  package.xml  setup.py
data_fusion_py/launch/: tracking.launch
data_fusion_py/msg/: PoseEstimate.msg
data_fusion_py/src/: image_sub.py  pose_estimation.py  real.py
data_fusion_py/src/util/: dodecaBoard.py  kalman.py  pose_estimation.py  real.py  real_multicam.py
infrared_tracking/examples/: example_position_server.py  example_simple_client.py
kalman_filter/: CMakeLists.txt  package.xml  setup.py
kalman_filter/src/: node.py  real_multicam.py  real_multicam_ros.py  test.py
kalman_filter/src/kalman_filter/: dodecaBoard.py  kalman.py  pose_estimation.py  real.py
models/: README.md  testTags.docx  ~$stTags.docx
models/aruco_box/: model.sdf
models/aruco_box/materials/textures/: marker_info.yml
models/aruco_marker_0/: model.config  model.sdf
models/aruco_marker_0/materials/scripts/: marker.material
models/aruco_marker_1/: model.config  model.sdf
models/aruco_marker_1/materials/scripts/: marker.material
models/aruco_reference/: model.config  model.sdf
models/aruco_reference/materials/textures/: marker_info.yml
models/dodecahedron/: faces.py
models/src/: create_marker_tile_image.py  gen_dodeca_tile.py  gen_marker_png.py
models/surgical_pointer/: mesh.stl  model.config  model.sdf
raspberrypi/: opencvStreaming.py  raspberrypi commands.txt  shutdown.sh
ros_aruco_gazebo/: CMakeLists.txt  package.xml
ros_aruco_gazebo/launch/: capstone_sim.launch  gazebo_sim.launch  real_camera.launch
ros_aruco_gazebo/rviz/: config.rviz  display_config.rviz
ros_aruco_gazebo/src/: real_camera.py
ros_aruco_gazebo/worlds/: 4_cam.world  4_camera.world  5_camera.world  aruco_box_4cm.world  aruco_target_ref.world  empty_camera.world  surgical_pointer.world  target_ref_box.world
trajectory_generation/: CMakeLists.txt  package.xml
trajectory_generation/src/: control_pointer.py  follow_trajectory.py
