<?xml version="1.0"?>
<package format="2">
  <name>ros_aruco_gazebo</name>
  <version>0.1.0</version>
  <description>Simple world for aruco box and camera</description>
  <maintainer email="andrew.stirling2@mail.mcgill.ca">Andrew Stirling</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>cv_bridge</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rviz_config</exec_depend>
</package>
